--- a/tictionary/pubspec.yaml
+++ b/tictionary/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
+  speech_to_text: ^2.3.0
+  highlight_text: ^0.7.2
+  avatar_glow: ^1.2.0
+  translator: ^0.1.7
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
