--- a/tictionary/android/app/src/main/AndroidManifest.xml
+++ b/tictionary/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,14 @@
     package="com.example.tictionary">
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
+    <queries>
+        <intent>
+            <action android:name="android.speech.RecognitionService" />
+        </intent>
+    </queries>
    <application
         android:label="tictionary"
         android:name="${applicationName}"
