--- a/tictionary/ios/Runner/Info.plist
+++ b/tictionary/ios/Runner/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>Translation</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Microphone</string>
 	<key>CFBundleDisplayName</key>
 	<string>Tictionary</string>
 	<key>CFBundleExecutable</key>
