--- a/tictionary/pubspec.yaml
+++ b/tictionary/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   avatar_glow: ^1.2.0
   translator: ^0.1.7
   modal_progress_hud: ^0.1.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
