--- a/tictionary/pubspec.yaml
+++ b/tictionary/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon_tictionary.jpg
+    - assets/map_icon.jpeg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
