--- a/tictionary/pubspec.yaml
+++ b/tictionary/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   assets:
     - assets/icon_tictionary.jpg
     - assets/map_icon.jpeg
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
